--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            padding: 0;
+            margin: 0;
+        }
         .main-container {
             height: 100vh;
             width: 100vw;
@@ -359,7 +363,11 @@
 
 
         @media (max-width:430px) {
-
+            
+  body{
+            padding: 0;
+            margin: 0;
+        }
             /* header---start--------------------- */
             .header {
                 height: 8%;
