--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
                         alt="">
                     <br>
                     <b class="card-text-name"> Wedding Stage </b>
-                    <button class="button-see-more"><a href="./pages/project-file/wedding-1.html">See More</a></button>
+                    <button class="button-see-more"><a href="./pages/project-file/wedding-stage-1.html">See More</a></button>
                 </div>
                 <div class="box-01">
                     <img class="img-hw"
@@ -1032,7 +1032,7 @@
                         alt="">
                     <br>
                     <b class="card-text-name"> Haldi & Mehandi </b>
-                    <button class="button-see-more">See More</button>
+                    <button class="button-see-more"><a href="./pages/project-file/Haldi-mehandi--2.html">See More</a></button>
                 </div>
                 <div class="box-01">
                     <img class="img-hw"
@@ -1040,14 +1040,14 @@
                         alt="">
                     <br>
                     <b class="card-text-name"> Dj & Lights </b>
-                    <button class="button-see-more">See More</button>
+                    <button class="button-see-more"><a href="./pages/project-file/ dj&light--3.html">See More</a></button>
                 </div>
                 <div class="box-01">
                     <img class="img-hw" src="https://i.pinimg.com/236x/ec/34/f6/ec34f67043134327c38844e8ec95dd9e.jpg"
                         alt="">
                     <br>
                     <b class="card-text-name"> Home Decoration </b>
-                    <button class="button-see-more">See More</button>
+                    <button class="button-see-more"><a href="./pages/project-file/home-decoration-4.htm">See More</a></button>
                 </div>
             </div>
 
