--- a/html/vicky.html
+++ b/html/vicky.html
@@ -9,7 +9,7 @@
         body {
             padding: 0;
             margin: 0;
-            background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2);
+
         }
 
         .main-container {
@@ -275,7 +275,7 @@
             font-size: 16px;
             border-radius: 3px;
             border: none;
-             background-color: rgb(0, 81, 138);
+            background-color: rgb(0, 81, 138);
             color: #ffffff;
         }
 
@@ -297,11 +297,17 @@
         .skills-card {
             height: 180px;
             width: 220px;
-          background-color: rgb(0, 81, 138);;
+            background-color: rgba(156, 72, 3, 0.59);
+            ;
             margin-top: 17px;
             transition: 0.2s transform 0.2s;
             display: flex;
             flex-direction: column;
+        }
+
+        .skills-card:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px rgb(13, 65, 170);
         }
 
         .skills-icons-1 {
@@ -311,16 +317,18 @@
         }
 
         .skills-icons-2 {
-             height: 60px;
+            height: 60px;
             width: 60px;
             padding-left: 73px;
         }
-        .skills-text-box{
+
+        .skills-text-box {
             text-align: center;
             padding-top: 10px;
             color: wheat;
         }
-        .long-text{
+
+        .long-text {
             color: #d7fff2;
             font-size: 15px;
             text-align: center;
@@ -329,16 +337,13 @@
 
 
 
-        .skills-card:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 15px rgb(170, 13, 13);
-        }
+
 
 
         /* ----section-two--end --- */
 
         .section-three {
-            height: 90%;
+            height: 100%;
             width: 100%;
             display: flex;
             flex-direction: column;
@@ -346,6 +351,7 @@
 
         .project-name {
             width: 100%;
+
             font-size: 30px;
             text-align: center;
             background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2);
@@ -386,7 +392,7 @@
         .section-three-box-1 {
             height: 50%;
             width: 100%;
-            background-color: #6d076c;
+
             display: flex;
             justify-content: space-evenly;
             padding-top: 30px;
@@ -395,18 +401,69 @@
         .htmlcss-project-box {
             height: 280px;
             width: 350px;
-            background-color: #d7fff2;
+            background-color: #3b3b3b;
 
+        }
+
+        .project-box-img {
+            height: 180px;
+            width: 300px;
+            padding-left: 23px;
+            padding-top: 15px;
+        }
+
+        .project-name-card {
+            text-align: center;
+            font-size: 20px;
+            margin-top: 1px;
+            color: white;
+        }
+
+        .project-card-button {
+            height: 30px;
+            width: 135px;
+            margin-left: 110px;
+            border: none;
+            font-size: 15px;
+            background-color: rgb(97, 196, 54);
+            color: #e2fff5;
+            border-radius: 4px;
+            margin-top: -6px;
         }
 
         .section-three-box-2 {
             height: 50%;
             width: 100%;
-            background-color: #6d076c;
+
             display: flex;
             justify-content: space-evenly;
 
         }
+
+        .section-four {
+            height: 40%;
+            width: 100%;
+            background-color: yellowgreen;
+            display: flex;
+            justify-content: space-evenly;
+
+
+        }
+
+        .contact-box {
+            height: 150px;
+            width: 400px;
+            background-color: rgb(238, 130, 238);
+            margin-top: 60px;
+            text-align: center;
+            font-size: 25px;
+        }
+
+        .contact-box:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px rgb(10, 179, 209);
+        }
+
 
 
 
@@ -664,19 +721,19 @@
                     <div class="skills-card">
                         <img class="skills-icons-1" src="https://img.icons8.com/?size=50&id=wsixpbozZFBy&format=png"
                             alt="">
-                         
-                            <b class="skills-text-box"> Html / Css</b>
+
+                        <b class="skills-text-box"> Html / Css</b>
                     </div>
                     <div class="skills-card">
-                        <img class="skills-icons-2" src="https://img.icons8.com/?size=80&id=67375&format=png"
-                         alt="">
-                          <b class="skills-text-box"> Responsive Web Design</b>
-                          <p class="long-text">Designing mobile-friendly websites that adapt to various screen sizes and deliver excellent user experience.</p>
+                        <img class="skills-icons-2" src="https://img.icons8.com/?size=80&id=67375&format=png" alt="">
+                        <b class="skills-text-box"> Responsive Web Design</b>
+                        <p class="long-text">Designing mobile-friendly websites that adapt to various screen sizes and
+                            deliver excellent user experience.</p>
                     </div>
                     <div class="skills-card">
                         <img class="skills-icons-2" src="https://img.icons8.com/?size=64&id=Nkym0Ujb8VGI&format=png"
                             alt="">
-                              <b class="skills-text-box"> JavaScript</b>
+                        <b class="skills-text-box"> JavaScript</b>
                     </div>
                 </div>
 
@@ -700,21 +757,66 @@
             <!--  -->
             <div class="section-three-box-1">
 
-                <div class="htmlcss-project-box"></div>
-                <div class="htmlcss-project-box"></div>
-                <div class="htmlcss-project-box"></div>
+                <div class="htmlcss-project-box">
+
+                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <p class="project-name-card">Chess</p>
+                    <button class="project-card-button">View Project</button>
+                </div>
+                <div class="htmlcss-project-box">
+                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <p class="project-name-card">Chess</p>
+                    <button class="project-card-button">View Project</button>
+                </div>
+                <div class="htmlcss-project-box">
+                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <p class="project-name-card">Chess</p>
+                    <button class="project-card-button">View Project</button>
+                </div>
             </div>
 
 
 
 
             <div class="section-three-box-2">
-                <div class="htmlcss-project-box"></div>
-                <div class="htmlcss-project-box"></div>
-                <div class="htmlcss-project-box"></div>
+                <div class="htmlcss-project-box">
+                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <p class="project-name-card">Chess</p>
+                    <button class="project-card-button">View Project</button>
+                </div>
+                <div class="htmlcss-project-box">
+                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <p class="project-name-card">Chess</p>
+                    <button class="project-card-button">View Project</button>
+                </div>
+                <div class="htmlcss-project-box">
+                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <p class="project-name-card">Chess</p>
+                    <button class="project-card-button">View Project</button>
+                </div>
             </div>
         </div>
         <!--------section-three--end --------->
+        <!-- section-four-start -->
+        <div class="project-name" id="Contact">Contact</div>
+        <div class="section-four">
+            <div class="contact-box">
+                <p>Phone</p>
+                <b><a href="tel:9875657856">8975657856</a></b>
+            </div>
+            <div class="contact-box">
+                <p>Gmail</p>
+                <b><a href="mailto:dharpurevicky9@gmail.com">dharpurevicky9@gmail.com</a></b>
+            </div>
+
+            <div class="contact-box">
+                <p>Location</p>
+                <b><a href="https://www.google.com/maps/place/Nagpur,+Maharashtra,+India" target="_blank">Nagpur,
+                  Maharashtra, India</a></b>
+            </div>
+        </div>
+        <div>Desing & Develope by Vicky Dharpure</div>
+        <!-- section-four-end -->
 
 
 
