--- a/html/vicky.html
+++ b/html/vicky.html
@@ -23,8 +23,10 @@
         .section-one {
             height: 80%;
             width: 100%;
-            background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2);
+            /* background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2); */
             display: flex;
+            background: linear-gradient(to right, #171717, rgb(1, 33, 61), rgb(1, 36, 64), #383b3a);
+          
         }
 
         /* header */
@@ -104,6 +106,7 @@
         .developer-home-text {
             font-size: 22px;
             padding-left: 160px;
+            color: antiquewhite;
 
         }
 
@@ -113,25 +116,26 @@
             padding-top: 10px;
             display: flex;
             gap: 19px;
+            color: wheat;
 
         }
 
         .home-number-1 {
             font-size: 35px;
             padding-left: 65px;
-            color: rgb(4, 4, 130);
+            color: rgb(255, 255, 255);
         }
 
         .home-number-2 {
             font-size: 35px;
             padding-left: 53px;
-            color: rgb(4, 4, 130);
+            color: rgb(254, 254, 255);
         }
 
         .home-number-3 {
             font-size: 35px;
             padding-left: 40px;
-            color: rgb(4, 4, 130);
+            color: rgb(255, 255, 255);
         }
 
         .home-page-button-1 {
@@ -190,18 +194,21 @@
         .section-two {
             height: 80%;
             width: 100%;
-            background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2);
+            /* background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2); */
             display: flex;
+            background: linear-gradient(to right, #171717, rgb(1, 33, 61), rgb(1, 36, 64), #383b3a);
 
 
 
         }
 
         .about-headline {
-            background-color: aliceblue;
+            /* background-color: aliceblue; */
+            color: white;
             font-size: 37px;
             text-align: center;
             padding-top: 9px;
+            background: linear-gradient(to right, #bebcbc, rgb(1, 33, 61), rgb(1, 36, 64), #b2b5b4);
         }
 
 
@@ -238,13 +245,14 @@
         .codder-name {
             padding-left: 210px;
             font-size: 35px;
-            color: #6d076c;
+        color: wheat;
 
         }
 
         .codder-skills {
             padding-left: 180px;
             font-size: 40px;
+             color: wheat;
 
         }
 
@@ -259,12 +267,14 @@
             padding-left: 30px;
             padding-right: 40px;
             padding-top: 30px;
+             color: wheat;
         }
 
         .text-language {
             font-size: 23px;
             padding-left: 30px;
             padding-right: 40px;
+             color: wheat;
 
         }
 
@@ -283,6 +293,7 @@
 
             font-size: 40px;
             text-align: center;
+             color: wheat;
 
         }
 
@@ -297,8 +308,8 @@
         .skills-card {
             height: 180px;
             width: 220px;
-            background-color: rgba(156, 72, 3, 0.59);
-            ;
+            background-color: rgba(3, 156, 154, 0.59);
+            border-radius: 19px;
             margin-top: 17px;
             transition: 0.2s transform 0.2s;
             display: flex;
