--- a/html/java.html
+++ b/html/java.html
@@ -26,7 +26,7 @@
             /* background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2); */
             display: flex;
             background: linear-gradient(to right, #171717, rgb(1, 33, 61), rgb(1, 36, 64), #383b3a);
-          
+
         }
 
         /* header */
@@ -104,10 +104,31 @@
         }
 
         .developer-home-text {
-            font-size: 22px;
+            font-size: 20px;
             padding-left: 160px;
             color: antiquewhite;
+            overflow: hidden;
+            white-space: nowrap;
 
+            animation: typing 3.5s steps(40, end) forwards, blink 0.75s step-end infinite;
+        }
+
+
+
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+
+            to {
+                width: 70%;
+            }
+        }
+
+        @keyframes blink {
+            50% {
+                border-color: transparent;
+            }
         }
 
         .experiences-text {
@@ -171,8 +192,8 @@
         }
 
         .img-box-section-1 {
-            height: 380px;
-            width: 390px;
+            height: 300px;
+            width: 330px;
             background-color: #944f4f;
             border-radius: 2px;
             display: flex;
@@ -183,8 +204,8 @@
         }
 
         .developer-img {
-            height: 370px;
-            width: 380px;
+            height: 290px;
+            width: 320px;
         }
 
         /* -------  section--one-end  -----*/
@@ -208,7 +229,8 @@
             font-size: 37px;
             text-align: center;
             padding-top: 9px;
-            background: linear-gradient(to right, #bebcbc, rgb(1, 33, 61), rgb(1, 36, 64), #b2b5b4);
+            /* background: linear-gradient(to right, #bebcbc, rgb(1, 33, 61), rgb(1, 36, 64), #b2b5b4); */
+            background: linear-gradient(to right, #171717, rgb(1, 33, 61), rgb(1, 36, 64), #383b3a);
         }
 
 
@@ -245,14 +267,14 @@
         .codder-name {
             padding-left: 210px;
             font-size: 35px;
-        color: wheat;
+            color: wheat;
 
         }
 
         .codder-skills {
             padding-left: 180px;
             font-size: 40px;
-             color: wheat;
+            color: wheat;
 
         }
 
@@ -267,14 +289,14 @@
             padding-left: 30px;
             padding-right: 40px;
             padding-top: 30px;
-             color: wheat;
+            color: wheat;
         }
 
         .text-language {
             font-size: 23px;
             padding-left: 30px;
             padding-right: 40px;
-             color: wheat;
+            color: wheat;
 
         }
 
@@ -293,7 +315,7 @@
 
             font-size: 40px;
             text-align: center;
-             color: wheat;
+            color: wheat;
 
         }
 
@@ -358,14 +380,16 @@
             width: 100%;
             display: flex;
             flex-direction: column;
+            background: linear-gradient(to right, #171717, rgb(1, 33, 61), rgb(1, 36, 64), #383b3a);
         }
 
         .project-name {
+            margin-top: -36px;
             width: 100%;
-
-            font-size: 30px;
+            font-size: 35px;
             text-align: center;
-            background: linear-gradient(to right, #e2fff5, aliceblue, aliceblue, #d7fff2);
+            color: white;
+             background: linear-gradient(to right, #171717, rgb(1, 33, 61), rgb(1, 36, 64), #2a2c2b);
 
         }
 
@@ -412,7 +436,7 @@
         .htmlcss-project-box {
             height: 280px;
             width: 350px;
-            background-color: #3b3b3b;
+            background-color: #e0e0e0;
 
         }
 
@@ -427,7 +451,7 @@
             text-align: center;
             font-size: 20px;
             margin-top: 1px;
-            color: white;
+            color: rgb(0, 0, 0);
         }
 
         .project-card-button {
@@ -454,7 +478,7 @@
         .section-four {
             height: 40%;
             width: 100%;
-            background-color: yellowgreen;
+             background: linear-gradient(to right, #171717, rgb(1, 33, 61), rgb(1, 36, 64), #383b3a);
             display: flex;
             justify-content: space-evenly;
 
@@ -462,12 +486,12 @@
         }
 
         .contact-box {
-            height: 150px;
-            width: 400px;
+            height: 100px;
+            width: 230px;
             background-color: rgb(238, 130, 238);
             margin-top: 60px;
             text-align: center;
-            font-size: 25px;
+            font-size: 18px;
         }
 
         .contact-box:hover {
@@ -661,8 +685,9 @@
 
                 <div class="section-1-box-1">
                     <h1 class="home-skills"> Creative Developer</h1>
-                    <p class="developer-home-text"> I create digital experiences that inspire and engage. With a passion
-                        for clean design and innovative solutions, I transform ideas into beautiful, functional
+                    <p class="developer-home-text"> I create digital experiences that inspire and engage. With <br> a
+                        passion
+                        for clean design and br innovative solutions, I <br> transform ideas into beautiful, functional
                         realities.
                     </p>
 
@@ -770,17 +795,23 @@
 
                 <div class="htmlcss-project-box">
 
-                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <img class="project-box-img"
+                        src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067"
+                        alt="">
                     <p class="project-name-card">Chess</p>
                     <button class="project-card-button">View Project</button>
                 </div>
                 <div class="htmlcss-project-box">
-                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <img class="project-box-img"
+                        src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067"
+                        alt="">
                     <p class="project-name-card">Chess</p>
                     <button class="project-card-button">View Project</button>
                 </div>
                 <div class="htmlcss-project-box">
-                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <img class="project-box-img"
+                        src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067"
+                        alt="">
                     <p class="project-name-card">Chess</p>
                     <button class="project-card-button">View Project</button>
                 </div>
@@ -791,17 +822,23 @@
 
             <div class="section-three-box-2">
                 <div class="htmlcss-project-box">
-                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <img class="project-box-img"
+                        src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067"
+                        alt="">
                     <p class="project-name-card">Chess</p>
                     <button class="project-card-button">View Project</button>
                 </div>
                 <div class="htmlcss-project-box">
-                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <img class="project-box-img"
+                        src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067"
+                        alt="">
                     <p class="project-name-card">Chess</p>
                     <button class="project-card-button">View Project</button>
                 </div>
                 <div class="htmlcss-project-box">
-                    <img class="project-box-img" src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067" alt="">
+                    <img class="project-box-img"
+                        src="https://camo.githubusercontent.com/21bb8ae3629c4852404841252c65baa38426e4c0d01a68a0f7e6fd121d4649dc/68747470733a2f2f7777772e69696d2e66722f65636f6c652d7765622f77702d636f6e74656e742f75706c6f6164732f323031372f30312f48544d4c352e6a7067"
+                        alt="">
                     <p class="project-name-card">Chess</p>
                     <button class="project-card-button">View Project</button>
                 </div>
@@ -823,11 +860,23 @@
             <div class="contact-box">
                 <p>Location</p>
                 <b><a href="https://www.google.com/maps/place/Nagpur,+Maharashtra,+India" target="_blank">Nagpur,
-                  Maharashtra, India</a></b>
+                        Maharashtra, India</a></b>
+            </div>
+
+            <div class="contact-box">
+                <p>Github</p>
+                <b><a href="mailto:dharpurevicky9@gmail.com">dharpurevicky9@gmail.com</a></b>
+            </div>
+
+            <div class="contact-box">
+                <p>Linkedin</p>
+                <b><a href="https://www.google.com/maps/place/Nagpur,+Maharashtra,+India" target="_blank">Nagpur,
+                        Maharashtra, India</a></b>
             </div>
         </div>
-        <div>Desing & Develope by Vicky Dharpure</div>
-        <!-- section-four-end -->
+    </div>
+    
+    <!-- section-four-end -->
 
 
 
