--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                     <h1 class="shop-name"> Ganesh Decor & Events</h1>
 
                     <h1 class="shop-name-1">All types of Deocration Events are available</h1>
-                    <button class="button-homepage"> Contact us</button>
+                    <button class="button-homepage"> <a href="tel:9049668439">Contact us</a></button>
                 </span>
             </div>
         </div>
@@ -1278,7 +1278,7 @@
                     <img class="icons-img" src="./assets/images/icons8-call-50.png" alt="">
                     <span class="contact-text">Talk to Our Client Support Team
                         <br>
-                        <b class="number">9049668439</b>
+                        <b class="number"><a href="tel:9049668439">9049668439</a></b>
 
                     </span>
                 </span>
@@ -1307,7 +1307,7 @@
 
         <!--  section--nine---end-------- -- -->
         <div class="web-developer">
-            <h1><i>design & developed by </i>: Vicky Dhrpure</h1>
+            <h1><i>design & developed by </i>: Vicky Dharpure</h1>
         </div>
 
     </div>
